--- a/src/vboa/templates/eboa_nav/eboa_nav.html
+++ b/src/vboa/templates/eboa_nav/eboa_nav.html
@@ -14,7 +14,7 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane {% block div_active_events %} {% endblock %}" id="nav-events">
-      {% include "eboa_nav/query_events.html" %}
+      {% block events_nav_content %} {% endblock %}
     </div>
     <!-- /.col-lg-12 -->
     <div class="tab-pane {% block div_active_explicit_references %} {% endblock %}" id="nav-explicit-references">
