--- a/src/vboa/templates/eboa_nav/eboa_nav.html
+++ b/src/vboa/templates/eboa_nav/eboa_nav.html
@@ -11,6 +11,7 @@
   <ul class="nav nav-tabs responsive-tabs">
     <li {% block li_active_events %} {% endblock %}><a href="#nav-events">Events</a></li>
     <li {% block li_active_explicit_references %} {% endblock %}><a href="#nav-explicit-references">Explicit references</a></li>
+    <li {% block li_active_sources %} {% endblock %}><a href="#nav-sources">Sources</a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane {% block div_active_events %} {% endblock %}" id="nav-events">
@@ -18,7 +19,10 @@
     </div>
     <!-- /.col-lg-12 -->
     <div class="tab-pane {% block div_active_explicit_references %} {% endblock %}" id="nav-explicit-references">
-
+      {% block explicit_references_nav_content %} {% endblock %}
+    </div>
+    <div class="tab-pane {% block div_active_sources %} {% endblock %}" id="nav-sources">
+      {% block sources_nav_content %} {% endblock %}
     </div>
     <!-- /.col-lg-12 -->
   </div>
