--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -3,7 +3,7 @@
 {% block div_active_events %}active{% endblock %}
 {% block events_nav_content %}
 <div>
-  <a href="query-events"><p class="fa fa-chevron-left"> Back to query events</p></a>
+  <a href="/eboa_nav/query-events"><p class="fa fa-chevron-left"> Back to query events</p></a>
 </div>
 <table width="100%" class="table table-striped table-bordered table-hover" id="events">
   <thead>
@@ -26,7 +26,8 @@
       <td>{{ event.start }}</td>
       <td>{{ event.stop }}</td>
       <td>{{ event.ingestion_time }}</td>
-      <td>{{ event.source.name }}</td>
+      {% set source_uuid = event.source.processing_uuid %}
+      <td><a href="/eboa_nav/query-source/{{ source_uuid }}">{{ event.source.name }}</a></td>
       <td>
         {% set er = "" %}
         {% if event.explicitRef %}
@@ -47,8 +48,11 @@
       <th>Ingestion Time</th>
       <th>Source</th>
       <th>Explicit Reference</th>
-      <th>Event UUID</th>
+      <th>UUID</th>
     </tr>
   </tfoot>
 </table>
+{% endblock %}
+{% block sources_nav_content %}
+{% include "eboa_nav/query_sources_content.html" %}
 {% endblock %}
