--- a/src/vboa/templates/eboa_nav/query_events.html
+++ b/src/vboa/templates/eboa_nav/query_events.html
@@ -2,64 +2,8 @@
 {% block li_active_events %}class="active"{% endblock %}
 {% block div_active_events %}active{% endblock %}
 {% block events_nav_content %}
-<div class="col-lg-12" id="nav-events">
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <div class="row">
-        <div class="col-xs-12">
-          <form role="form" method=post action="query-events">
-            <div class="row">
-              <div class="col-xs-3">
-                <label>Source like</label>
-                <input class="form-control" name="source_like"/>
-              </div>
-              <div class="col-xs-3">
-                <label>Explicit reference like</label>
-                <input class="form-control" name="er_like"/>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-2">
-                <label>Gauge name like</label>
-                <input class="form-control" name="gauge_name_like"/>
-              </div>
-              <div class="col-xs-2">
-                <label>Gauge system like</label>
-                <input class="form-control" name="gauge_system_like"/>
-              </div>
-            </div>
-            <div class="row" id="start-stop">
-              {% include "eboa_nav/start_stop.html" %}
-              <div>
-                <span id="add-start-stop">
-                  <span class="glyphicon glyphicon-plus"></span>
-                </span>
-              </div>
-            </div>
-            <div id="more-start-stop">
-            </div>
-            <div class="row">
-              {% include "eboa_nav/ingestion_time.html" %}
-              <div>
-                <span id="add-ingestion-time">
-                  <span class="glyphicon glyphicon-plus"></span>
-                </span>
-              </div>
-            </div>
-            <div id="more-ingestion-time">
-            </div>
-            <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
-            </div>
-          </form>
-        </div>
-        <!-- /.col-lg-6 (nested) -->
-      </div>
-      <!-- /.row (nested) -->
-    </div>
-    <!-- /.panel-body -->
-  </div>
-  <!-- /.panel -->
-</div>
-<!-- /.panel -->
+{% include "eboa_nav/query_events_content.html" %}
+{% endblock %}
+{% block sources_nav_content %}
+{% include "eboa_nav/query_sources_content.html" %}
 {% endblock %}
