Add an option to select the linked events
Add timeline graph for showing the events

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -11,6 +11,8 @@
     <title>VBOA - Visualization tool for Bussiness Operation Analysis</title>
     
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='node_modules/vis/dist/vis.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='node_modules/vis/dist/vis-timeline-graph2d.min.css') }}">
 
     <!-- Custom CSS from https://startbootstrap.com/template-overviews/sb-admin-2/ -->
     <link href="{{ url_for('static', filename='css/sb-admin-2.min.css') }}" rel="stylesheet">
