--- a/src/vboa/templates/eboa_nav/linked_events_nav.html
+++ b/src/vboa/templates/eboa_nav/linked_events_nav.html
@@ -27,16 +27,21 @@
         </tr>
       </thead>
       <tbody>
-        {% for key in events %}
-        {% for event in events[key] %}
+        {% for key in links %}
+        {% for link in links[key] %}
         <tr>
+          {% if key == "prime_events" %}
+          {% set event = link %}
+          {% set description = "PRIME" %}
+          {% else %}
+          {% set event = link["event"] %}
+          {% if key == "linked_events" %}
+          {% set description = "LINK FROM: " + link["link_name"] %}
+          {% elif key == "events_linking" %}
+          {% set description = "LINK TO: " + link["link_name"] %}
+          {% endif %}
+          {% endif %}
           <td>
-            {% set description = "PRIME" %}
-            {% if key == "linked_events" %}
-            {% set description = "LINK FROM" %}
-            {% elif key == "events_linking" %}
-            {% set description = "LINK TO" %}
-            {% endif %}
             {{ description }}
           </td>
           <td>{{ event.gauge.name }}</td>
@@ -90,18 +95,33 @@
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Timeline of events
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <div id="events_nav_timeline">
+    </div>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
 {% endblock %}
 {% block scripts %}
     <script src="{{ url_for('static', filename='node_modules/vis/dist/vis.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='node_modules/vis/dist/vis-network.min.js') }}"></script>
     <script type="module">
       import * as graph from "{{ url_for('static', filename='js/graph.js') }}";
-      {% with events=events %}
+      {% with links=links %}
       {% include "graphs/events_to_json_for_network.js" %}
       {% endwith %}
       console.log(edges)
       console.log(nodes)
       graph.display_network("events_nav_network", nodes, edges);
+      {% with events=events %}
+      {% include "graphs/events_to_json_for_timeline.js" %}
+      {% endwith %}
+      graph.display_timeline("events_nav_timeline", items, groups);
     </script>
     {{ super() }}
 {% endblock %}
