--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -45,6 +45,11 @@
             <div id="more-ingestion-time">
             </div>
             <div>
+              <label>
+                <input type="checkbox" id="show-timeline" name="show_timeline" checked><span class="label-text"><b>Show timeline</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
             </div>
           </form>
