--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -81,15 +81,13 @@
 {% endif %}
 {% endblock %}
 {% block scripts %}
-    <script src="{{ url_for('static', filename='node_modules/vis/dist/vis.min.js') }}"></script>
-    <script type="module">
-      import * as graph from "{{ url_for('static', filename='js/graph.js') }}";
+    {{ super() }}
+    <script type="text/javascript">
       {% if show_timeline %}
       {% with events=events %}
       {% include "graphs/events_to_json_for_timeline.js" %}
       {% endwith %}
-      graph.display_timeline("events_nav_timeline", items, groups);
+      vboa.display_timeline("events_nav_timeline", items, groups);
       {% endif %}
     </script>
-    {{ super() }}
 {% endblock %}
