--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -35,6 +35,16 @@
             <div id="more-ingestion-generation-time">
             </div>
             <div>
+              <label>
+                <input type="checkbox" id="show-timeline" name="show_validity_timeline" checked><span class="label-text"><b>Show validity timeline</b></span>
+              </label>
+            </div>
+            <div>
+              <label>
+                <input type="checkbox" id="show-timeline" name="show_generation_to_ingestion_timeline" checked><span class="label-text"><b>Show generation to ingestion timeline</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
             </div>
           </form>
