--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -5,46 +5,159 @@
 <div>
   <a href="/eboa_nav/query-sources"><p class="fa fa-chevron-left"> Back to query sources</p></a>
 </div>
-<table width="100%" class="table table-striped table-bordered table-hover" id="sources">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Validity start</th>
-      <th>Validity stop</th>
-      <th>Generation time</th>
-      <th>Ingestion Time</th>
-      <th>DIM signature</th>
-      <th>Processor</th>
-      <th>Version</th>
-      <th>UUID</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for source in sources %}
-    <tr>
-      <td>{{ source.name }}</td>
-      <td>{{ source.validity_start }}</td>
-      <td>{{ source.validity_stop }}</td>
-      <td>{{ source.generation_time }}</td>
-      <td>{{ source.ingestion_time }}</td>
-      <td>{{ source.dimSignature.dim_signature }}</td>
-      <td>{{ source.dimSignature.dim_exec_name }}</td>
-      <td>{{ source.dim_exec_version }}</td>
-      <td>{{ source.processing_uuid }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>Name</th>
-      <th>DIM signature</th>
-      <th>Processor</th>
-      <th>Validity start</th>
-      <th>Validity stop</th>
-      <th>Generation time</th>
-      <th>Ingestion Time</th>
-      <th>UUID</th>
-    </tr>
-  </tfoot>
-</table>
+{% set not_ingested_sources = sources|selectattr("ingestion_duration", "none")|list %}
+{% if not_ingested_sources|length > 0 %}
+<div class="panel panel-red">
+  <div class="panel-heading">
+    Table of not ingested sources
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <table width="100%" class="table table-striped table-bordered table-hover" id="sources">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Validity start</th>
+          <th>Validity stop</th>
+          <th>Generation time</th>
+          <th>DIM signature</th>
+          <th>Processor</th>
+          <th>Version</th>
+          <th>UUID</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for source in not_ingested_sources %}
+        <tr>
+          <td>{{ source.name }}</td>
+          <td>{{ source.validity_start }}</td>
+          <td>{{ source.validity_stop }}</td>
+          <td>{{ source.generation_time }}</td>
+          <td>{{ source.dimSignature.dim_signature }}</td>
+          <td>{{ source.dimSignature.dim_exec_name }}</td>
+          <td>{{ source.dim_exec_version }}</td>
+          <td>{{ source.processing_uuid }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Name</th>
+          <th>Validity start</th>
+          <th>Validity stop</th>
+          <th>Generation time</th>
+          <th>DIM signature</th>
+          <th>Processor</th>
+          <th>Version</th>
+          <th>UUID</th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% endif %}
+<div class="panel panel-green">
+  <div class="panel-heading">
+    Table of ingested sources
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <table width="100%" class="table table-striped table-bordered table-hover" id="sources">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Validity start</th>
+          <th>Validity stop</th>
+          <th>Generation time</th>
+          <th>Ingestion Time</th>
+          <th>Ingestion Duration</th>
+          <th>DIM signature</th>
+          <th>Processor</th>
+          <th>Version</th>
+          <th>UUID</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for source in sources if source.ingestion_duration %}
+        <tr>
+          <td>{{ source.name }}</td>
+          <td>{{ source.validity_start }}</td>
+          <td>{{ source.validity_stop }}</td>
+          <td>{{ source.generation_time }}</td>
+          <td>{{ source.ingestion_time }}</td>
+          <td>{{ source.ingestion_duration }}</td>
+          <td>{{ source.dimSignature.dim_signature }}</td>
+          <td>{{ source.dimSignature.dim_exec_name }}</td>
+          <td>{{ source.dim_exec_version }}</td>
+          <td>{{ source.processing_uuid }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Name</th>
+          <th>Validity start</th>
+          <th>Validity stop</th>
+          <th>Generation time</th>
+          <th>Ingestion Time</th>
+          <th>Ingestion Duration</th>
+          <th>DIM signature</th>
+          <th>Processor</th>
+          <th>Version</th>
+          <th>UUID</th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% if show_validity_timeline %}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Validity timeline of sources
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <div id="sources_nav_validity_timeline">
+    </div>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% endif %}
+{% if show_generation_to_ingestion_timeline %}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Generation to ingestion timeline of sources
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <div id="sources_nav_generation_to_ingestion_timeline">
+    </div>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% endif %}
+{% endblock %}
+{% block scripts %}
+    {{ super() }}
+    <script type="text/javascript">
+      {% if show_validity_timeline or show_generation_to_ingestion_timeline %}
+      {% with sources=sources %}
+      {% include "graphs/sources_to_json.js" %}
+      {% endwith %}
+      {% endif %}
+      {% if show_validity_timeline %}
+      {% include "graphs/sources_validity_timeline.js" %}
+      vboa.display_timeline("sources_nav_validity_timeline", items, groups);
+      {% endif %}
+      {% if show_generation_to_ingestion_timeline %}
+      {% include "graphs/sources_generation_to_ingestion_timeline.js" %}
+      vboa.display_timeline("sources_nav_generation_to_ingestion_timeline", items, groups);
+      {% endif %}
+    </script>
 {% endblock %}
