--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -65,7 +65,7 @@
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
-{% if show_timeline %}
+{% if show["timeline"] %}
 <div class="panel panel-default">
   <div class="panel-heading">
     Timeline of events
@@ -83,7 +83,7 @@
 {% block scripts %}
     {{ super() }}
     <script type="text/javascript">
-      {% if show_timeline %}
+      {% if show["timeline"] %}
       {% with events=events %}
       {% include "graphs/events_to_json_for_timeline.js" %}
       {% endwith %}
