--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -45,6 +45,11 @@
               </label>
             </div>
             <div>
+              <label>
+                <input type="checkbox" id="show-number-events-xy" name="show_number_events_xy" checked><span class="label-text"><b>Show number of events over time per source</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
             </div>
           </form>
