Add X time graphs for showing detailed information related to sources
Refactor the js code to show graphs for sources

Fix bug when show variable is not avaialable

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -50,6 +50,16 @@
               </label>
             </div>
             <div>
+              <label>
+                <input type="checkbox" id="show-ingestion-duration-xy" name="show_ingestion_duration_xy" checked><span class="label-text"><b>Show ingestion duration over time per source</b></span>
+              </label>
+            </div>
+            <div>
+              <label>
+                <input type="checkbox" id="show-generation-time-to-ingestion-time-xy" name="show_generation_time_to_ingestion_time_xy" checked><span class="label-text"><b>Show generation to ingestion times over time per source</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
             </div>
           </form>
