--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -87,7 +87,7 @@
       {% with events=events %}
       {% include "graphs/events_to_json_for_timeline.js" %}
       {% endwith %}
-      vboa.display_timeline("events_nav_timeline", items, groups);
+      vboa.create_event_timeline(events, "events_nav_timeline");
       {% endif %}
     </script>
 {% endblock %}
