--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -4,28 +4,71 @@
       <div class="row">
         <div class="col-xs-12">
           <form role="form" method=post action="/eboa_nav/query-events">
-            <div class="row">
-              <div class="col-xs-3">
+            <!-- Sources -->
+            <div class="row" id="div-sources">
+              <div class="col-xs-3" id="div-source-like">
                 <label>Source like</label>
-                <input class="form-control" name="source_like"/>
+                <input class="form-control" list="source_like" name="source_like"/>
+                <datalist id="source_like">
+                </datalist>
               </div>
-              <div class="col-xs-3">
+              <div class="col-xs-3" id="div-sources">
+                <label>Sources</label>
+                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                </select>
+              </div>
+            </div>
+            <!-- Exlicit references -->
+            <div class="row" id="div-ers">
+              <div class="col-xs-3" id="div-er-like">
                 <label>Explicit reference like</label>
                 <input class="form-control" name="er_like"/>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-2" id="div-gauge-name">
-                <label>Gauge name like</label>
-                <input class="form-control" list="gauge_names" name="gauge_name_like" onfocus="vboa.fill_gauges()"/>
-                <datalist id="gauge_names">
-                </datalist>
+              <div class="col-xs-3" id="div-ers">
+                <label>Explicit references</label>
+                <select name="ers" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                </select>
               </div>
-              <div class="col-xs-2" id="div-gauge-system">
-                <label>Gauge system like</label>
-                <input class="form-control" list="gauge_systems" name="gauge_system_like" onfocus="vboa.fill_gauges()"/>
-                <datalist id="gauge_systems">
-                </datalist>
+            </div>
+            <!-- Event keys -->
+            <div class="row" id="div-keys">
+              <div class="col-xs-3" id="div-key-like">
+                <label>Key like</label>
+                <input class="form-control" name="key_like"/>
+              </div>
+              <div class="col-xs-3" id="div-keys">
+                <label>Keys</label>
+                <select name="keys" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                </select>
+              </div>
+            </div>
+            <!-- Gauges -->
+            <div>
+              <div class="row" id="div-gauges">
+                <div class="col-xs-2" id="div-gauge-name-like">
+                  <label>Gauge name like</label>
+                  <input class="form-control" list="gauge_names" name="gauge_name_like"/>
+                  <datalist id="gauge_names">
+                  </datalist>
+                </div>
+                <div class="col-xs-2" id="div-gauge-system-like">
+                  <label>Gauge system like</label>
+                  <input class="form-control" list="gauge_systems" name="gauge_system_like"/>
+                  <datalist id="gauge_systems">
+                  </datalist>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-2" id="div-gauge-names">
+                  <label>Gauge names</label>
+                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  </select>
+                </div>
+                <div class="col-xs-2" id="div-gauge-systems">
+                  <label>Gauge systems</label>
+                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  </select>
+                </div>
               </div>
             </div>
             <div class="row" id="start-stop">
